Fix gap

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ header {
   display: grid;
   grid-template-columns: 3fr 2fr;
   grid-template-rows: 2fr 3fr;
+  row-gap: 0.7rem;
   margin: 1rem 0;
 }
 
